--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
     "@react-three/rapier": "^1.5.0",
+    "@vercel/analytics": "^1.5.0",
     "leva": "^0.10.0",
     "maath": "^0.10.8",
     "react": "^18.3.1",
